--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.png">
+    <link rel="shortcut icon" href="favicon.png">
 
-    <title>校园预约</title>
+    <title>{{@title}}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../dist/css/bootstrap-datetimepicker.css" rel="stylesheet">
-    <link href="../../dist/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="{{@UI}}lib/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{@UI}}lib/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="offcanvas.css" rel="stylesheet">
+    <link href="{{@UI}}css/offcanvas.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="grid.css" rel="stylesheet">
+    <link href="{{@UI}}css/grid.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,7 +36,8 @@
         <div class="col-md-5">  </div>
         <div class="col-md-3">
           <div class="btn-group">
-            <button type="button" class="btn btn-default">登陆</button>
+            <a href="{{@WEB_ROOT}}login" class="btn btn-default">登录</a>
+            <!-- <button type="button" class="btn btn-default" href="/login">登陆</button>-->
             <button type="button" class="btn btn-default">注册</button>
           </div>
       </div>
