--- a/app/ui/login.html
+++ b/app/ui/login.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.png">
+<!--    <link rel="shortcut icon" href="favicon.png">-->
 
-    <title>校园预约登陆</title>
+    <title>{{@title}}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.css" rel="stylesheet">
+    <link href="{{@UI}}lib/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
+    <link href="{{@UI}}css/login.css" rel="stylesheet">
+    <script src="{{@UI}}lib/js/bootstrap.min.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -27,10 +28,10 @@
     <div class="container">
       <div class="row">
        <div class="col-md-6"> 
-        <form class="form-signin">
+        <form class="form-signin" method="post">
         <h2 class="form-signin-heading">登录并使用HIT校园预约</h2>
-        <input type="text" class="form-control" placeholder="用户名" autofocus>
-        <input type="password" class="form-control" placeholder="密码">
+        <input name="uname" type="text" class="form-control" placeholder="用户名" autofocus>
+        <input name="upass" type="password" class="form-control" placeholder="密码">
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> 记住我的登陆状态
         </label>
