注册，登陆，查询功能基本实现。

--- a/app/ui/signup.html
+++ b/app/ui/signup.html
@@ -26,16 +26,25 @@
   <body>
 
     <div class="container">
+     
       <div class="row">
        <div class="col-md-6"> 
         <form class="form-signin" method="post">
-        <h2 class="form-signin-heading">登录并使用HIT校园预约</h2>
+        <h2 class="form-signin-heading">注册并使用HIT校园预约</h2>
         <input name="uname" type="text" class="form-control" placeholder="用户名" autofocus>
         <input name="upass" type="password" class="form-control" placeholder="密码">
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> 记住我的登陆状态
-        </label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">登陆</button>
+        <input name="upass_check" type="password" class="form-control" placeholder="二次密码">
+        <div class="control-group">
+            <label class="control-label">用户类型</label>
+            <div class="controls">
+              <select name="ugroup">
+                <option value="student">学生</option>
+                <option value="teacher">教师</option>
+              </select>
+            </div>
+          </div>
+        
+        <button class="btn btn-lg btn-primary btn-block" type="submit">注册</button>
       </form>
     </div><!--/clo-md-6-->
   </div><!--/row-->
