--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.png">
 
     <title>{{@title}}</title>
 
@@ -17,34 +16,12 @@
     <link rel='stylesheet' type='text/css' href='{{@UI}}lib/css/jquery.weekcalendar.css' />
     <link rel='stylesheet' type='text/css' href='{{@UI}}css/teacher.css' />
     <style type='text/css'>
-    body {
-      font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
-      margin: 0;
-    }
-
-    h1 {
-      margin: 0 0 1em;
-      padding: 0.5em;
-    }
-
     p.description {
       font-size: 0.8em;
       padding: 1em;
       position: absolute;
       top: 3.2em;
       margin-right: 400px;
-    }
-
-    #message {
-      font-size: 0.7em;
-      position: absolute;
-      top: 1em;
-      right: 1em;
-      width: 350px;
-      display: none;
-      padding: 1em;
-      background: #ffc;
-      border: 1px solid #dda;
     }
     </style>
 
@@ -79,34 +56,21 @@
             }
           },
           eventNew: function(calEvent, $event) {
-            displayMessage('<strong>Added event</strong><br/>Start: ' + calEvent.start + '<br/>End: ' + calEvent.end);
             alert('You\'ve added a new event. You would capture this event, add the logic for creating a new event with your own fields, data and whatever backend persistence you require.');
           },
           eventDrop: function(calEvent, $event) {
-            displayMessage('<strong>Moved Event</strong><br/>Start: ' + calEvent.start + '<br/>End: ' + calEvent.end);
           },
           eventResize: function(calEvent, $event) {
-            displayMessage('<strong>Resized Event</strong><br/>Start: ' + calEvent.start + '<br/>End: ' + calEvent.end);
           },
           eventClick: function(calEvent, $event) {
-            displayMessage('<strong>Clicked Event</strong><br/>Start: ' + calEvent.start + '<br/>End: ' + calEvent.end);
           },
           eventMouseover: function(calEvent, $event) {
-            displayMessage('<strong>Mouseover Event</strong><br/>Start: ' + calEvent.start + '<br/>End: ' + calEvent.end);
           },
           eventMouseout: function(calEvent, $event) {
-            displayMessage('<strong>Mouseout Event</strong><br/>Start: ' + calEvent.start + '<br/>End: ' + calEvent.end);
           },
           noEvents: function() {
-            displayMessage('There are no events for this week');
           }
         });
-
-        function displayMessage(message) {
-          $('#message').html(message).fadeIn();
-        }
-
-        $('<div id="message" class="ui-corner-all"></div>').prependTo($('body'));
       });
 
     </script>
@@ -126,7 +90,9 @@
         <div class="btn-group navbar-btn">
           <a href="{{@WEB_ROOT}}login" class="btn btn-default">登录</a>
           <!-- <button type="button" class="btn btn-default" href="/login">登陆</button>-->
-          <button type="button" class="btn btn-default">注册</button>
+          <a href="{{@WEB_ROOT}}signup" class="btn btn-default">注册</a>
+          <a href="{{@WEB_ROOT}}user/searchT" class="btn btn-default">查询</a>
+          <!--<button type="button" class="btn btn-default">注册</button>-->
         </div>
         <div class="btn-group navbar-btn" style="width:15px"></div>
       </ul>
