增加了注册页面的跳转

--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -108,7 +108,7 @@
         <div class="btn-group navbar-btn">
           <a href="{{@WEB_ROOT}}login" class="btn btn-default">登录</a>
           <!-- <button type="button" class="btn btn-default" href="/login">登陆</button>-->
-          <button type="button" class="btn btn-default">注册</button>
+         <a href="{{@WEB_ROOT}}signup" class="btn btn-default">注册</a>
         </div>
         <div class="btn-group navbar-btn" style="width:15px"></div>
       </ul>
