--- a/app/ui/index.html
+++ b/app/ui/index.html
@@ -151,7 +151,8 @@
         <div class="btn-group navbar-btn">
           <a href="<?php echo $WEB_ROOT; ?>login" class="btn btn-default">登录</a>
           <!-- <button type="button" class="btn btn-default" href="/login">登陆</button>-->
-          <button type="button" class="btn btn-default">注册</button>
+          <a href="<?php echo $WEB_ROOT; ?>signup" class="btn btn-default">注册</a>
+          <a href="<?php echo $WEB_ROOT; ?>user/searchT" class="btn btn-default">查询</a>
         </div>
         <div class="btn-group navbar-btn" style="width:15px"></div>
       </ul>
