修复合并遗留错误

--- a/app/ui/searchT.html
+++ b/app/ui/searchT.html
@@ -10,13 +10,14 @@
     <title>{{@title}}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{{@UI}}lib/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{@WEB_ROOT}}{{@UI}}lib/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{{@UI}}css/login.css" rel="stylesheet">
-    <link href="{{@UI}}css/search.css" rel="stylesheet">
-    <script src="{{@UI}}lib/js/bootstrap.min.js"></script>
-    <script src="{{@UI}}js/jQuery.js"></script>
+    <link href="{{@WEB_ROOT}}{{@UI}}css/login.css" rel="stylesheet">
+    <link href="{{@WEB_ROOT}}{{@UI}}css/search.css" rel="stylesheet">
+    <script src="{{@WEB_ROOT}}{{@UI}}lib/js/jquery-2.0.3.js"></script>
+    <script src="{{@WEB_ROOT}}{{@UI}}lib/js/bootstrap.min.js"></script>
+    <script src="{{@WEB_ROOT}}{{@UI}}js/jQuery.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../../assets/js/html5shiv.js"></script>
