--- a/app/ui/login.html
+++ b/app/ui/login.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{{@UI}}css/login.css" rel="stylesheet">
+    <script src="{{@UI}}lib/js/jquery-2.0.3.js"></script>
     <script src="{{@UI}}lib/js/bootstrap.min.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
