--- a/app/ui/signup.html
+++ b/app/ui/signup.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{{@UI}}css/login.css" rel="stylesheet">
+    <script src="{{@UI}}lib/js/jquery-2.0.3.js"></script>
     <script src="{{@UI}}lib/js/bootstrap.min.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -32,9 +33,18 @@
         <input name="uname" type="text" class="form-control" placeholder="用户名" autofocus>
         <input name="upass" type="password" class="form-control" placeholder="密码"autofocus>
         <input name="upass_check" type="password" class="form-control" placeholder="确认密码">
+
+          <div class="control-group">
+            <label class="control-label">用户类型</label>
+            <div class="controls">
+              <select name="ugroup">
+                <option value="student">学生</option>
+                <option value="teacher">教师</option>
+              </select>
+            </div>
+          </div>
         
-        <a href="{{@WEB_ROOT}}sinfo" class="btn btn-default">学生注册</a>
-        <a href="{{@WEB_ROOT}}tinfo" class="btn btn-default">教师注册</a>
+        <button class="btn btn-default pull-right" type="submit">注册</button>
 
       </form>
     </div><!--/clo-md-6-->
