--- a/app/ui/sinfo.html
+++ b/app/ui/sinfo.html
@@ -13,6 +13,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{{@UI}}css/login.css" rel="stylesheet">
+    <script src="{{@UI}}lib/js/jquery-2.0.3.js"></script>
     <script src="{{@UI}}lib/js/bootstrap.min.js"></script>
   
   </head>
@@ -23,13 +24,13 @@
        	 <h2 class="form-signin-heading"  style="text-align:center">学生注册</h2>
        <form class="form-horizontal" action="{{@WEB_ROOT}}sinfo" method="post">
 
-        <input name="uname" type="text" class="form-control" placeholder="真实姓名" autofocus>
+        <input name="urealname" type="text" class="form-control" placeholder="真实姓名" autofocus>
 
-		<input name="uname" type="text" class="form-control" placeholder="电话号码" autofocus>
+		<input name="uphone" type="text" class="form-control" placeholder="电话号码" autofocus>
 
-		<input name="uname" type="text" class="form-control" placeholder="学院" autofocus>
+		<input name="ucollege" type="text" class="form-control" placeholder="学院" autofocus>
 
-		<input name="uname" type="text" class="form-control" placeholder="专业" autofocus>
+		<input name="uspecialty" type="text" class="form-control" placeholder="专业" autofocus>
 	
 <div class="form-actions">
 	<div class="controls btn-groups">
