--- a/app/ui/tinfo.html
+++ b/app/ui/tinfo.html
@@ -13,6 +13,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{{@UI}}css/login.css" rel="stylesheet">
+    <script src="{{@UI}}lib/js/jquery-2.0.3.js"></script>
     <script src="{{@UI}}lib/js/bootstrap.min.js"></script>
   
   </head>
@@ -23,15 +24,15 @@
        	 <h2 class="form-signin-heading" style="text-align:center">教师注册</h2>
         <form class="form-horizontal" action="{{@WEB_ROOT}}tinfo" method="post">
 	  
-		 <input name="uname" type="text" class="form-control" placeholder="真实姓名" autofocus>
+		 <input name="urealname" type="text" class="form-control" placeholder="真实姓名" autofocus>
 
-	     <input name="uname" type="text" class="form-control" placeholder="电话号码" autofocus>
+	     <input name="uphone" type="text" class="form-control" placeholder="电话号码" autofocus>
 
-	     <input name="uname" type="text" class="form-control" placeholder="学院" autofocus>
+	     <input name="ucollege" type="text" class="form-control" placeholder="学院" autofocus>
 
-	     <input name="uname" type="text" class="form-control" placeholder="办公地点" autofocus>
+	     <input name="ulocation" type="text" class="form-control" placeholder="办公地点" autofocus>
 	    
-	     <input name="uname" type="text" class="form-control" placeholder="职务" autofocus>
+	     <input name="ujob" type="text" class="form-control" placeholder="职务" autofocus>
 <!------------------------------------------------>
 
 <!-- 提交按扭 -->
