区分学生和老师

--- a/app/ui/login.html
+++ b/app/ui/login.html
@@ -36,7 +36,10 @@
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> 记住我的登陆状态
         </label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">登陆</button>
+        <div class="btn-group ">
+          <button class="btn btn-lg btn-primary " type="submit">登陆</button>
+          <a href="{{@WEB_ROOT}}signup" class="btn btn-lg btn-default">注册</a>
+        </div>
       </form>
     </div><!--/clo-md-6-->
   </div><!--/row-->
