--- a/app/ui/searchT.html
+++ b/app/ui/searchT.html
@@ -34,7 +34,8 @@
         <form class="form-signin" method="post">
         <h2 class="form-signin-heading">查询教师</h2>
         <div id="search">
-　       <input type="text" name="k" class="k" />&nbsp;<input         type="button" name="s" value="搜索" />
+　       <input type="text" name="k" class="k">&nbsp;</input>
+         <button type="button">搜索</button>
         </div>
         <div id="search_auto"></div>
       </form>
